Refactor: Add boilerplate and link to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,38 +1,63 @@
-<header>
-  <div class="bezzel">
-    <div></div>
-    <div></div>
-    <div></div>
-    <span>atom_shortcut.js - ~/code/shorcuts</span>
-  </div>
-  <nav>
-    <div class="tab">index.js</div>
-  </nav>
-</header>
-<div class="editor">
-  <aside>
-      1
-      2
-      3
-      4
-      5
-      6
-      7
-      8
-      9
-      10
-      11
-      12
-      13
-      14
-      15
-      16
-      17
-      18
-      19
-      20
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Learn keyboard shortcuts</title>
 
-  </aside>
-  <main></main>
-  <aside></aside>
-</div>
+    <link href="main.css" type="text/css" rel="stylesheet" >
+
+  </head>
+
+  <body>
+    <header>
+
+      <div class="bezzel">
+        <div></div>
+        <div></div>
+        <div></div>
+        <span>atom_shortcut.js - ~/code/shorcuts</span>
+
+      </div>
+
+      <nav>
+        <div class="nav-tab">
+          <span>index.js</span>
+        </div>
+
+      </nav>
+
+    </header>
+
+    <div class="editor">
+      <aside>
+          1
+          2
+          3
+          4
+          5
+          6
+          7
+          8
+          9
+          10
+          11
+          12
+          13
+          14
+          15
+          16
+          17
+          18
+          19
+          20
+
+      </aside>
+
+      <main></main>
+
+      <aside></aside>
+
+    </div>
+
+  </body>
+
+</html>
