Feature: Add blinking cursor and Mac btn on editor

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     <header>
 
       <div class="bezzel">
+        <!-- <div></div>
         <div></div>
-        <div></div>
-        <div></div>
-        <span>atom_shortcut.js - ~/code/shorcuts</span>
+        <div></div> -->
+        <div class="close"></div>
+        <div class="mini"></div>
+        <div class="full"></div>
+        <span>
+          atom_shortcut.js - ~/code/shorcuts
+        </span>
 
       </div>
 
       <nav>
         <div class="nav-tab">
-          <span>index.js</span>
+          <div>index.js</div>
         </div>
 
       </nav>
@@ -29,26 +34,30 @@
 
     <div class="editor">
       <aside>
-          1
-          2
-          3
-          4
-          5
-          6
-          7
-          8
-          9
-          10
-          11
-          12
-          13
-          14
-          15
-          16
-          17
-          18
-          19
-          20
+          <!-- <span class="editor-active-ln"> -->
+          <span>
+            1
+            <span class="editor-blinker"><div>|</div></span>
+          </span>
+          <span>2</span>
+          <span>3</span>
+          <span>4</span>
+          <span>5</span>
+          <span>6</span>
+          <span>7</span>
+          <span>8</span>
+          <span>9</span>
+          <span>10</span>
+          <span>11</span>
+          <span>12</span>
+          <span>13</span>
+          <span>14</span>
+          <span>15</span>
+          <span>16</span>
+          <span>17</span>
+          <span>18</span>
+          <span>19</span>
+          <span>20</span>
 
       </aside>
 
