Fix: Add correct path to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Learn keyboard shortcuts</title>
 
-    <link href="main.css" type="text/css" rel="stylesheet" >
+    <link href="sass/css/main.css" type="text/css" rel="stylesheet" >
 
   </head>
 
