Merge: Include BEM changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
 
       <div class="bezzel">
-        <div class="bezzel__close-btn"></div>
-        <div class="bezzel__mini-btn"></div>
-        <div class="bezzel__full-btn"></div>
+        <div class="btn btn--bezzel btn--red"></div>
+        <div class="btn btn--bezzel btn--yellow"></div>
+        <div class="btn btn--bezzel btn--green"></div>
         <span class="bezzel__title">
           atom_shortcut.js - ~/code/shorcuts
         </span>
@@ -30,13 +30,14 @@
     </header>
 
     <div class="editor">
-      <aside class="editor__ln-nums">
-          <!-- <span class="editor-active-ln"> -->
-          <span class="editor__ln--1">
+          <span class="editor__ln">
             1
+
             <span class="editor__ln--active">
-              <div class="editor__ln__blinker">|</div>
+              <span class="editor__blinker">|</span>
+
             </span>
+
           </span>
 
           <span>2</span>
@@ -59,13 +60,10 @@
           <span>19</span>
           <span>20</span>
 
-      </aside>
-
-      <main></main>
-
-      <aside></aside>
-
     </div>
+
+    <footer>
+    </footer>
 
   </body>
 
