--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Learn keyboard shortcuts</title>
+
+    <meta name="description" content="Learn shortcuts every developer must know | with Atom, Terminal, Chrome Dev Tools and more!">
+    <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
 
     <link href="sass/css/main.css" type="text/css" rel="stylesheet" >
 
