Refactor: Add missing files for BEM structure

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <body>
     <header>
 
-      <div class="bezzel">
-        <div class="btn btn--bezzel btn--red"></div>
-        <div class="btn btn--bezzel btn--yellow"></div>
-        <div class="btn btn--bezzel btn--green"></div>
-        <span class="bezzel__title">
+      <div class="bezel">
+        <div class="btn btn--bezel btn--caution"></div>
+        <div class="btn btn--bezel btn--secondary"></div>
+        <div class="btn btn--bezel btn--primary"></div>
+        <span class="bezel__title">
           atom_shortcut.js - ~/code/shorcuts
         </span>
 
