Refactor: Reorganize file structure

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Learn shortcuts every developer must know | with Atom, Terminal, Chrome Dev Tools and more!">
     <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
 
-    <link href="sass/css/main.css" type="text/css" rel="stylesheet" >
+    <link href="../sass/css/main.css" type="text/css" rel="stylesheet" >
 
   </head>
 
@@ -72,6 +72,7 @@
     <footer class="footer">
     </footer>
 
+  <script src="./js/events.js"></script>
   </body>
 
 </html>
