Feat: Add input for shortcut

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
             1
 
             <span class="editor__ln--active">
-              <span class="editor__blinker">|</span>
+              <!-- <span class="test">const someCode = [];</span>
+              <span class="editor__blinker">|</span> -->
+              <input type="text" class="editor__ln--input" autofocus>
 
             </span>
 
