Refactor: Change style & margin for consistent layout

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,33 @@
         <title>Learn keyboard shortcuts</title>
         <meta name="description" content="Learn shortcuts every developer must know | with Atom, Terminal, Chrome Dev Tools and more!">
         <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <style>
             .temp {
                 width: 400px;
                 height: 100vh;
                 background-color: #181A1F;
+                position: absolute;
+                top: 0;
+                left: 75%;
             }
+
+            .gameTitle {
+                margin: 2rem 0 2rem 3rem;
+                /*color: #D9E8F8;*/
+                /*color: #50A2FB; */
+                /*color: #38E7A8;*/
+                color: #509DF2;
+                font-family: 'Montserrat', sans-serif;
+                letter-spacing: 3px;
+            }
+
         </style>
     </head>
 
     <body>
+        <h1 class="gameTitle">Press key combination to solve the puzzle</h1>
+
         <div id="root"></div>
 
     </body>
