fix: Remove temp styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <style>
-            .temp {
+/*             .temp {
                 width: 400px;
                 height: 100vh;
                 background-color: #181A1F;
@@ -24,7 +24,7 @@
                 color: #509DF2;
                 font-family: 'Montserrat', sans-serif;
                 letter-spacing: 3px;
-            }
+            } */
 
         </style>
     </head>
