--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,17 @@
         <meta name="description" content="Learn shortcuts every developer must know | with Atom, Terminal, Chrome Dev Tools and more!">
         <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet"
+              href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
         <style>
-/*             .temp {
+             .temp {
                 width: 400px;
                 height: 100vh;
                 background-color: #181A1F;
                 position: absolute;
                 top: 0;
                 left: 75%;
-            }
-
-            .gameTitle {
-                margin: 2rem 0 2rem 3rem;
-                color: #509DF2;
-                font-family: 'Montserrat', sans-serif;
-                letter-spacing: 3px;
-            } */
-
+             }
         </style>
     </head>
 
@@ -33,6 +27,5 @@
         <h1 class="gameTitle">Press key combination to solve the puzzle</h1>
 
         <div id="root"></div>
-
     </body>
 </html>
