styles: Add styling & animation to app header

--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,34 @@
         <meta name="description" content="Learn shortcuts every developer must know | with Atom, Terminal, Chrome Dev Tools and more!">
         <meta name="keywords" content="shortcuts, Atom shortcuts, chrome shortcuts, dev tools shortcuts, terminal shortcuts, bash shortcuts, developer">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link rel="stylesheet"
-              href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
         <style>
-             .temp {
-                width: 400px;
-                height: 100vh;
-                background-color: #181A1F;
-                position: absolute;
-                top: 0;
-                left: 75%;
+             .game__tips {
+                /*order: 2;*/
+                width: 28%;
+                /*height: 100vh;*/
+                 height: 100vh;
+                 /*width: 100px;*/
+                /*background-color: #292C33;*/
+                background-color: #292C33;
+                /*top: 0;*/
+                /*transform: translateY(-39px);*/
              }
+
+            .game__footer {
+                /*height: 18rem;*/
+                /*width: 100%;*/
+                height: 32%;
+                width: 100%;
+                align-self: flex-end;
+                background-color: #22252B;
+                margin-top: 2rem;
+
+            }
         </style>
     </head>
 
     <body>
-        <h1 class="gameTitle">Press key combination to solve the puzzle</h1>
-
         <div id="root"></div>
     </body>
 </html>
